# rust_react_todo_app

./: .env  .gitignore  Cargo.toml  todo.sqlite
src/: app.rs  controllers.rs  db.rs  main.rs
src/migrations/: V1__add_brand_to_cars_table.rs  V1__add_brand_to_cars_table.sql
