[package]
name = "rust-react-todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"
rusqlite = "0.26.3"
refinery = { version = "0.8.1", features = ["rusqlite"]}
barrel = { version = "0.7.0", features = ["sqlite3"] }
dotenv = "0.15.0"

[dependencies.db]
git = "https://github.com/ALMRust/db"
